<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="about_title">About TheLuvExchange App</string>
    <string name="about_text">About Text</string>
    <string name="cities">Cities</string>
    <string name="app_name">The LUV Exchange</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="remember">Remember Me</string>
    <string name="register">New to The LUV Exchange? Register Here</string>
    <string name="main_menu">Main Menu</string>
    <string name="profile">Profile</string>
    <string name="forum">Forum</string>
    <string name="gallery">Gallery</string>
    <string name="sw_cities">S/W Cities</string>
    <string name="weather">Weather</string>
    <string name="luvNews">Luv News</string>
    <string name="buy_sell">Buy/Sell</string>
    <string name="address">Address:</string>
    <string name="rating">"Rating: "</string>
    <string name="RandC">Restaurants and Clubs</string>
    <string name="Thingstodo">Things to do</string>
    <string name="AirportEats">Airport Eats</string>
    <string name="CityGallery">City Gallery</string>
    <string name="Weather">Get Weather</string>
    <string name="restaurants">Restaurants</string>
    <string name="clubs">&amp; Clubs</string>
    <string name="today_humidity">--</string>
    <string name="Humidity_Label">Humidity:</string>
    <string name="Vis_Label">Visibility:</string>
    <string name="Prec_Label">Precipitation:</string>
    <string name="Wind_Label">Wind:</string>
    <string name="WindD">---</string>
    <string name="WindS">--</string>
    <string name="forecast_label">Forecast for next 3 days:</string>
    <string name="curF">--`F</string>
    <string name="at">at</string>
    <string name="prec">--</string>
    <string name="tempMin">--`F</string>
   <string name="hum">-%</string>
   <string name="tempMax">--`F</string>
   <string name="max_label">TempMax</string>
   <string name="min_label">TempMin</string>
   <string name="Vis">--mi</string>
   <string name="comment">"Comment: "</string>
   <string name="discount">"Discount: "</string>
   <string name="submit">Submit</string>
   <string name="comments">"Comments: "</string>
   <string name="disc">"Disc: "</string>
   <string name="near">"Near: "</string>
   <string name="votes">"Votes: "</string>
   <string name="checkin">Check In</string>
   <color name="Black">#372c24</color>
   <color name="White">#ffffff</color>
   <string name="Addcomm">Add comment</string>
      <string name="add_vote">Add Vote</string>
         <string name="change_city">Change City</string>
         <string name="Popularity">Popularity</string>
         <string name="rating2">Rating</string>
         <string name="latest">Latest</string>
         <string name="exception_message">exception_message</string>
         <string name="sitename">www.theluvexchange.com</string>
         <string name="comingsoon">Coming Soon!</string>
  
</resources>