<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#ffffff">
    
    
     <TextView
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#003684"
            android:drawableLeft="@drawable/ic_launcher"
            android:drawablePadding="5dip"
            android:padding="5dip"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:gravity="center" />

     <RelativeLayout
         android:id="@+id/relativeLayout1"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" >

         <TextView
             android:id="@+id/textViewCommentTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:paddingTop="10dp"
             android:text="Title"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="#372c24"
             android:textStyle="bold" />

         <TextView
             android:id="@+id/textViewCommentPickName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textViewCommentTitle"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="14dp"
             android:text="Large Text"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="#372c24"
             android:textStyle="bold" />

         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/textViewCommentPickName"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="21dp"
             android:text="@string/comment"
             android:textColor="#372c24" />

         <EditText
             android:id="@+id/editTextPickComment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/textViewCommentPickName"
             android:layout_alignTop="@+id/textView2"
             android:height="150dp"
             android:inputType="textMultiLine"
             android:scrollbarStyle="insideOverlay"
             android:width="150dp" />

         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/textView2"
             android:layout_below="@+id/editTextPickComment"
             android:layout_marginTop="15dp"
             android:text="@string/rating"
             android:textColor="#372c24" />

         <RatingBar
             android:id="@+id/ratingBarCommentPick"
             style="@style/MyCustomRatingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/editTextPickComment"
             android:layout_alignTop="@+id/textView1" />

         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/textView1"
             android:layout_below="@+id/ratingBarCommentPick"
             android:layout_marginTop="15dp"
             android:text="@string/discount"
             android:textColor="#372c24" />

         <CheckBox
             android:id="@+id/checkBoxDiscount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/ratingBarCommentPick"
             android:layout_below="@+id/ratingBarCommentPick"
             android:text="CheckBox" />

         <Button
             android:id="@+id/buttonSubmit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/checkBoxDiscount"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:text="@string/submit" android:textStyle="bold"/>

     </RelativeLayout>

</LinearLayout>