<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    
    <TextView
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#003684"
            android:drawableLeft="@drawable/ic_launcher"
            android:drawablePadding="5dip"
            android:padding="5dip"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:gravity="center" />

    <ListView
        android:id="@+id/commentlistView1"
        android:layout_width="fill_parent"
        android:layout_height="340dp"
        android:layout_x="3dp"
        android:layout_y="89dp"
        android:cacheColorHint="#ffffff" >

    </ListView>

    <Button
        android:id="@+id/addcominbtn"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_x="180dp"
        android:layout_y="430dp"
        android:text="@string/Addcomm" />

    <Button
        android:id="@+id/checkinbtn"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_x="21dp"
        android:layout_y="430dp"
        android:text="@string/checkin" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="34dp"
        android:layout_x="0dp"
        android:layout_y="60dp" >

        <TextView
            android:id="@+id/nomes"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="23dp"
            android:text="No messages"
            android:textColor="@color/Black" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/nomes"
            android:layout_alignBottom="@+id/nomes"
            android:layout_alignParentRight="true"
            android:layout_marginRight="27dp"
            android:text="Messages last 36 hours"
            android:textColor="@color/Black" />

    </RelativeLayout>
    
</AbsoluteLayout>